chore: drop epub4j-native